More scripts. Found the API dump JSONS.
There are still benefits to the HTML over JSON, but JSON has many over the HTML. Will follow both paths for a while and see what's more useful in the end. All scripts are very premature at this stage.

--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,12 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# VS Code
+*.code-workspace
+
+# My own files
+_test_file.py
+/Archive
+/api_dumps
+/api_dumps_2
